# ttrs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  optimization_example.ipynb
.cargo/: config.toml
examples/: 1d_optimization.rs  mdp.rs
linwrap/: Cargo.toml  build.rs
linwrap/examples/: matrix_ops_bench.rs  sparse_numerical_integration.rs
linwrap/src/: arpack_bind.rs  blas_bind.rs  concatenation.rs  elementwise_binary_ops.rs  elementwise_inplace_binary_ops.rs  elementwise_unary_ops.rs  init_utils.rs  lapack_bind.rs  lib.rs  linalg.rs  linalg_utils.rs  matrix.rs  ndarray.rs  ndarray_utils.rs  par_ptr_wrapper.rs  par_utils.rs  reduction_ops.rs  sparse_linalg.rs
src/: lib.rs  mutli_indices.rs  pytt_vec.rs  test_pywrap.py  tt.rs  tt_cross.rs  tt_traits.rs  tt_vec.rs  ttcross.rs  utils.rs
