[package]
name = "ttrs"
version = "0.1.0"
edition = "2021"

[dependencies]
linwrap = { path = "linwrap" }
rayon = "1.6.0"
num-complex = { version = "0.4.2", features = ["serde"] }
num-traits = "0.2.15"
rand = "0.8.5"
rawpointer = "0.2.1"
pyo3 = { version = "0.17.3", features = ["extension-module", "num-complex"] }
numpy = "0.17.2"
serde = { version = "1.0", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]

[workspace]

members = [
  "linwrap",
]
