[package]
name = "linwrap"
version = "0.1.0"
edition = "2021"

[dependencies]
num-complex = "0.4.2"
#rayon = "1.6.0"
rawpointer = "0.2.1"
rand = "0.8.5"
rand_distr = "0.4.3"
blas-src = { version = "0.8", features = ["blis"] }
lapack-src = { version = "0.8", features = ["openblas"] }

[dev-dependencies]
ndarray = "0.15.6"
ndarray_einsum_beta = "0.7.0"
ndarray-rand = "0.14.0"